# FinanceSignal

./: .dockerignore  .gitignore  CLAUDE.md  README.md  processes.json  pyproject.toml  requirements.txt  subreddits.json  test_reddit_connectivity.py  ticker_tags.json
app/: backfetch.py  config.py  database.py  db_logging.py  entity_mass_correct.py  fetch_processor.py  fundamentals.py  main.py  ner_backfill.py  ner_processor.py  portfolio_snapshotter.py  price_archiver.py  process_manager.py  relevance_backfill.py  relevance_queue.py  scraper.py
app/bot_engine/: __init__.py  backtester.py  base_bot.py  context.py  data_builder.py  data_point.py  discovery.py  runner.py
app/routers/: analysis.py  bots.py  entities.py  events.py  fundamentals.py  market.py  mentions.py  posts.py  processes.py  reddit_stats.py  scraper.py  subreddits.py  system.py  ticker_tags.py  tickers.py  trading.py
bots/momentum_surge/: README.md  bot.py
docker/: Dockerfile  build.sh  deploy.sh  stop.sh
docs/: other-sources.md  paper-trading.md  process-manager.md  sentiment-methodology.md  trading-bots.md  volatility-trading.md
docs/reference/: canonicalization.md  entities.md  fundamentals-process.md  llm-analysis.md  llm-trace.md  logging.md  queues.md  relevance.md  scraper-fetching.md  trading-bots.md
docs/todo/: continuous_collector.md
docs/user-stories/: 05-ticker-endpoints.md  (+26 more)
frontend/: index.html  package-lock.json  package.json
scripts/: backfill.py  backfill_24h.py  drop_relevance_scores.py  entities.py  fetch_new.py  migrate_json_to_db.py  process.py  stats.py  timeline.py
(+77 files in other folders)
