[project]
name = "reddit-sentinel"
version = "2.0.0"
description = "Reddit data collection and ticker extraction"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "matplotlib",
    "spacy",
    "scipy",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
